Completed Basic Register

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,5 @@
 <h1>Register</h1>
+<%- include ('./partials/messages') %>
 <form action="/users/register" method="POST">
     <div>
       <label for="name">Name</label>
@@ -25,7 +26,6 @@
       type="password"
       name="password"
       placeholder="Create Password"
-      value="<%= typeof password != 'undefined' ? password : '' %>"
     />
     </div>
     <div >
@@ -34,7 +34,6 @@
           type="password"
           name="password2"
           placeholder="Confirm Password"
-          value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
         />
     </div>
     <button type="submit" class="btn btn-primary btn-block">
