--- a/views/register.ejs
+++ b/views/register.ejs
@@ -36,7 +36,7 @@
           placeholder="Confirm Password"
         />
     </div>
-    <button type="submit" class="btn btn-primary btn-block">
+    <button type="submit" class="register-btn">
     Register
     </button>
 </form>
