--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,7 @@
 <h1> Login </h1>
 
+<%- include ('./partials/messages') %>
+
 <form action="/users/login" method="POST">
 <div>
 <label for="email">Email</label>
