--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -1,5 +1,10 @@
 <% if(typeof errors!= 'undefined') { %>
 <%    errors.forEach(function(error){ %>
-<p> <%= error.msg %></p>
-<%    })        %>
+		<p> <%= error.msg %></p>
+<%   }) %>
+<% } %>
+
+
+<% if(success_msg != '') { %>
+	<p><%= success_msg %> </p>
 <% } %>
