--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -8,3 +8,11 @@
 <% if(success_msg != '') { %>
 	<p><%= success_msg %> </p>
 <% } %>
+
+
+<% if(error_msg != '') { %>
+  <%= error_msg %> 
+<% } %> 
+<% if(error != '') { %>
+  <%= error %>
+<% } %>
