--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,4 @@
 <html>
-<h1>Welcome To DashBoard!</h1>
+	<h1>Hey <%= user.name %> Welcome To DashBoard!</h1>
+	<p><a href="/users/logout">Logout</a></p>
 </html>
